--- a/HousePricePrediction.ipynb
+++ b/HousePricePrediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,39 +19,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'c:\\\\Users\\\\ramma\\\\Documents\\\\Ram\\\\Preparation\\\\Data Science\\\\Kaggle\\\\HousePricePrediction'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\ramma\\Documents\\Ram\\Preparation\\Data Science\\Kaggle\\HousPricPred\n"
+     ]
     }
    ],
    "source": [
     "# Print current working directory address\n",
-    "os.getcwd()"
+    "address = os.getcwd()\n",
+    "print(address)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Read the train and test csv files.\n",
-    "train_df = pd.read_csv('c:\\\\Users\\\\ramma\\\\Documents\\\\Ram\\\\Preparation\\\\Data Science\\\\Kaggle\\\\HousePricePrediction\\\\train.csv')\n",
-    "test_df = pd.read_csv('c:\\\\Users\\\\ramma\\\\Documents\\\\Ram\\\\Preparation\\\\Data Science\\\\Kaggle\\\\HousePricePrediction\\\\test.csv')"
+    "train_df = pd.read_csv(f'{address}\\\\train.csv')\n",
+    "test_df = pd.read_csv(f'{address}\\\\test.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +545,7 @@
        "[8 rows x 37 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -559,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +734,7 @@
        "[4 rows x 43 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -748,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -772,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -796,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -824,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -846,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1025,7 +1023,7 @@
        "[1121 rows x 7 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1036,7 +1034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1066,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1076,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1099,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1191,6 +1189,135 @@
     "    plt.grid(True)\n",
     "    plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['OverallQual',\n",
+       " 'TotalBsmtSF',\n",
+       " '1stFlrSF',\n",
+       " 'GrLivArea',\n",
+       " 'GarageCars',\n",
+       " 'GarageArea']"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sete_columns = saleprice_correlation[(saleprice_correlation.abs() > 0.6) & (saleprice_correlation.abs() != 1)].index.tolist()\n",
+    "\n",
+    "sete_columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "OverallQual    0\n",
+       "TotalBsmtSF    1\n",
+       "1stFlrSF       0\n",
+       "GrLivArea      0\n",
+       "GarageCars     1\n",
+       "GarageArea     1\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Lets check which fields have null values\n",
+    "setrdf = selected_df\n",
+    "setedf = test_df[sete_columns]\n",
+    "setedf.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "OverallQual    0\n",
+       "TotalBsmtSF    0\n",
+       "1stFlrSF       0\n",
+       "GrLivArea      0\n",
+       "GarageCars     0\n",
+       "GarageArea     0\n",
+       "SalePrice      0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "setrdf.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Replace the nulls in test data with mode values\n",
+    "setedf['TotalBsmtSF'] = setedf['TotalBsmtSF'].replace(np.nan,setedf['TotalBsmtSF'].mode()[0])\n",
+    "setedf['GarageCars'] = setedf['GarageCars'].replace(np.nan,setedf['GarageCars'].mode()[0])\n",
+    "setedf['GarageArea'] = setedf['GarageArea'].replace(np.nan,setedf['GarageArea'].mode()[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "OverallQual    0\n",
+       "TotalBsmtSF    0\n",
+       "1stFlrSF       0\n",
+       "GrLivArea      0\n",
+       "GarageCars     0\n",
+       "GarageArea     0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "setedf.isna().sum()\n",
+    "# Null values are replaced by mode of individual columns."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
